--- a/custom_components/petkit/manifest.json
+++ b/custom_components/petkit/manifest.json
@@ -7,6 +7,6 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/Jezza34000/homeassistant_petkit/issues",
   "loggers": ["petkit"],
-  "requirements": ["pypetkitapi==1.16.4", "aiofiles==24.1.0"],
+  "requirements": ["pypetkitapi @ git+https://github.com/dekamaru/py-petkit-api.git@main", "aiofiles==24.1.0"],
   "version": "1.15.1"
 }
